--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <title>Weather</title>
 </head>
 <body>
-    
+    <form id="weather_form">
+        <label>
+            <p>
+                Enter your city:
+                <input type="text" id="city_name" name="city_name" required minlength="3">
+            </p>
+            <input type="submit" id="submit">
+        </label>
+    </form>
 </body>
 </html>
